# peacechat

contextualization/: AUDIT_REPORT.md  README.md  REPORT.md  RESULTS.md  analyze_beliefs.py  build_dataset.py  eval_beliefs.py  eval_results.tgz  load_artifact_wandb.py  pyproject.toml  validate.py
contextualization/ctx/: __init__.py  basecorpus.py  blend.py  factpool.py  nanochat_io.py  rng.py  templates.py
