[project]
name = "ctx-dataset"
version = "0.1.0"
description = "Contextualization pretraining-data builder for a three-arm nanochat AI-safety experiment"
readme = "README.md"
requires-python = ">=3.10"
# Deliberately light deps: data prep runs on a CPU box. The nanochat tokenizer
# (rustbpe/tiktoken) is NOT a dependency here -- the tokenizer is trained once by
# nanochat itself and only *copied* into each arm (see README §7), so this project
# never needs the native BPE code to build shards.
dependencies = [
    "pyarrow>=15.0.0",   # parquet read/write in nanochat's exact format
    "numpy>=1.24.0",     # deterministic seeded RNG
    "tqdm>=4.66.0",      # progress bars
    "requests>=2.31.0",  # on-demand FineWeb shard download (mirrors nanochat/dataset.py)
    "datasets>=2.18.0",  # optional: CounterFact held-out probe adapter (graceful fallback if offline)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ctx"]
